# goal500-python

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: update_data.yml
data/: player_stats.csv
docs/: data.json  index.html
goal500/: __init__.py  docs.py  site.py
goal500/cli/: __init__.py  __main__.py
goal500/scrapers/: wikipedia.py
goal500/tests/: test_cli.py  test_data_processing.py  test_site.py  test_visualization.py  test_wikipedia.py
goal500/utils/: data_processing.py
goal500/visualization/: plots.py
notebooks/: visualizar.ipynb
